--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.6.8",
     "next": "14.2.3",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
